Mon Jul 15 16:15:22 1996  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* miscellaneous/bug_report.m: Don't redirect output to /dev/tty in
	system command.
	
Fri Jul 12 12:24:29 1996  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* __plr1__.m: Renamed from polar_int_1.m.
	* __plr2__.m: Renamed from polar_int_2.m.
	* __plr__.m: Renamed from polar_int.m.
	* __plt1__.m: Renamed from plot_int_1.m.
	* __plt2__.m: Renamed from plot_int_2.m.
	* __plt2mm__.m: Renamed from plot_2_m_m_.m.
	* __plt2mv__.m: Renamed from plot_2_m_v_.m.
	* __plt2ss__.m: Renamed from plot_2_s_s_.m.
	* __plt2vm__.m: Renamed from plot_2_v_m_.m.
	* __plt2vv__.m: Renamed from plot_2_v_v_.m.
	* __plt__.m: Renamed from plot_int.m.
	* __pltopt__.m: Renamed from plot_opt.m.
	Change all callers.

Thu Jul 11 17:24:29 1996  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* All .m files: Add regular Author:, Created:, and Adapted-By:
	comments like those found in Emacs lisp files.

Mon Jun 24 04:16:41 1996  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* All .m files: Change comment style.

Fri Jun 14 01:42:21 1996  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* bottom_title.m, mplot.m, multiplot.m, oneplot.m, plot_border.m,
	subplot.m, subwindow.m, top_title.m:
	Print error message if gnuplot_has_multiplot is not true.

Thu Jun  6 00:18:54 1996  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* plot/figure.m: New function.

Wed Jun  5 18:19:00 1996  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* strings/strrep.m: New function.

Thu May 23 15:04:22 1996  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* strings/bin2dec.m, strings/blanks.m, strings/deblank.m,
	strings/dec2bin.m, strings/dec2hex.m, strings/findstr.m,
	strings/hex2dec.m, strings/index.m, strings/rindex.m,
	strings/split.m, strings/str2mat.m, strings/substr.m:
	New functions from Kurt Hornik, heavily modified by jwe.

	* general/reshape.m: Allow strings to be reshaped too.

	* strings/strcmp.m: No longer need to set implicit_str_to_num_ok.
	Always return a scalar.
